fixed scrollbar issue on mac

--- a/neocities/phonePages/css/homepageBase.css
+++ b/neocities/phonePages/css/homepageBase.css
@@ -12,6 +12,8 @@ body{
     display: flex;
     flex-flow: column wrap;
     height: calc(100vh - 5px);
+
+    overflow: hidden;
 }
 
 .homepage {
